# nav_infrastructure

./: .gitignore  README.md
controller_server/: CMakeLists.txt  package.xml
controller_server/config/: controller_server_params.yaml
controller_server/include/controller_server/: controller.hpp  pose_manager.hpp
controller_server/launch/: controller_server.launch.py
controller_server/src/: controller_server.cpp  pose_manager.cpp
custom_inflation/occupancy_grid_inflation/src/: inflation_node.cpp
example_plugins/example_path_planner_plugin/src/: example_path_planner_plugin.cpp
goal_selection/: package.xml  setup.py
goal_selection/config/: waypoints.json
goal_selection/goal_selection/: goal_selection_algo.py  goal_selection_node.py  goal_selection_server.py  gpt_gs.py  waypoint_manager.py
goal_selection/launch/: goal_selection.launch.py
goal_selection_pkg/: package.xml
goal_selection_pkg/goal_selection_pkg/: goal_selection_algo.py  goal_selection_node.py
gps_coord_pub/gps_coord_pub/: gps_coord_pub.py
infra_common/: CMakeLists.txt
infra_common/include/infra_common/: cell_coordinate.hpp  pose_manager.hpp
infra_common/src/: costmap.cpp  pose_manager.cpp
infra_interfaces/: CMakeLists.txt
infra_interfaces/action/: FollowPath.action  NavigateToGoal.action
infra_interfaces/msg/: FollowPathRequest.msg
infra_launch/: CMakeLists.txt  package.xml
infra_launch/config/: infra_params.yaml
infra_launch/launch/: infra.launch.py
log/: latest_list
map_interfaces/: CMakeLists.txt
odom_debug/: package.xml  setup.cfg  setup.py
odom_debug/odom_debug/: odom_subscriber.py
path_tracking/: setup.py
path_tracking/path_tracking/: pure_pursuit_controller.py  pure_pursuit_lookahead.py  pure_pursuit_tester.py
planner_server/: CMakeLists.txt  package.xml
planner_server/config/: planner_server_params.yaml
planner_server/src/: planner_server.cpp
plugin_base_classes/: CMakeLists.txt  package.xml
plugin_base_classes/include/plugin_base_classes/: controller.hpp  path_planner.hpp
point_simulator/point_simulator/: point_simulator_node.py  test_movement.py
